# regime-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: study.ipynb
notes/: code-walkthrough.md  how-it-works.md
src/regimes/: __init__.py  allocation.py  data.py  hmm.py
tests/: test_allocation.py  test_hmm.py
